--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </ul>
 
 
-        <h1> France</h1>
-        <marquee> made by khavyaaaaaa </marquee>
-        France, officially the French Republic,is a country located primarily in Western Europe. Its overseas regions and territories include French Guiana in South America, Saint Pierre and Miquelon in the North Atlantic, the French West Indies, and many islands in Oceania and the Indian Ocean, giving it one of the largest discontiguous exclusive economic zones in the world.
+        <h1> perkenalan kelompok </h1>
+        <marquee> made by kelompok 5 </marquee>
+        haiiii kami adalah kelom limaaaa
         <img src="./98510a0c6013f5913fac4b6d6c3aac12_1_.jpg" width="250">
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
