--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </ul>
 
 
-        <h1> perkenalan kelompok </h1>
+        <h1> SPARK </h1>
         <marquee> made by kelompok 5 </marquee>
-        haiiii kami adalah kelom limaaaa
+       Space Pioneers and Adventurers for Radiant Knowledge
         <img src="./98510a0c6013f5913fac4b6d6c3aac12_1_.jpg" width="250">
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
