--- a/index.html
+++ b/index.html
@@ -1,32 +1,65 @@
 <!doctype html>
-
 <html>
     <head>
         <meta charset="utf-8">
-
-        <title>Blank template</title>
-
+        <title>SPARK Website </title>
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
-
     </head>
-
     <body>
         <ul>
                <li> Home </li>
-                <li><a href="Process.html">Design Process</a></li>
-                <li><a href="Product.html"> Product</a></li>
+               <li><a href="Process.html">Design Process</a></li>
+               <li><a href="Product.html"> Product</a></li>
         </ul>
 
+        <h1>SPARK</h1>
+        <marquee>Made by Group 5</marquee>
+        <p class="centered paragraph1">Space Pioneers and Adventurers for Radiant Knowledge</p>
+        <p class="centered paragraph2"> Welcome to the SPARK website! In this ever-evolving platform, space exploration is not just a dream but an exciting challenge for us to explore together. This web game is designed to provide an interactive and immersive experience of the wonders of the vast universe. During your journey, you will learn a lot about planets, stars, galaxies, and other space phenomena. We hope that through this game, you can expand your knowledge of outer space while enjoying the strategic challenges it offers. Become a space exploration hero, and get ready to face the various obstacles that await out there.  </p>
+        <p class="centered paragraph3"> Happy playing and exploring!</p>
+        
+        <p class="centered paragraph4"> Our Team </p>
 
-        <h1> SPARK </h1>
-        <marquee> made by kelompok 5 </marquee>
-       Space Pioneers and Adventurers for Radiant Knowledge
-        <img src="./98510a0c6013f5913fac4b6d6c3aac12_1_.jpg" width="250">
+        <!-- Team Section -->
+        <div class="team-container">
+            <!-- Bagian 1 -->
+            <div class="team-box">
+                <h2>WEB PROGRAMMER</h2>
+                <p>Responsible for designing, coding, and maintaining the quality of our website.</p>
+                <p class="assigned">ASSIGNED TO: LOVELEEN KALEELA HENDRAWAN</p>
+            </div>
+
+            <!-- Bagian 2 -->
+            <div class="team-box">
+                <h2>GAME PROGRAMMER</h2>
+                <p>Responsible for designing the game flow to be developed.</p>
+                <p class="assigned">ASSIGNED TO: AULIA MUTHMAINNA</p>
+            </div>
+
+            <!-- Bagian 3 -->
+            <div class="team-box">
+                <h2>APPLICATION PROGRAMMER</h2>
+                <p>Responsible for designing the application flow to be developed and optimizing game performance.</p>
+                <p class="assigned">ASSIGNED TO: CARRISA AYLA SALSABILLA</p>
+            </div>
+
+            <!-- Bagian 4 -->
+            <div class="team-box">
+                <h2>CONTENT WRITER</h2>
+                <p>Responsible for writing informative and engaging articles to explain the game products.</p>
+                <p class="assigned">ASSIGNED TO: ANNISA PUTRI CHAIRANI</p>
+            </div>
+
+            <!-- Bagian 5 -->
+            <div class="team-box full-width">
+                <h2>GRAPHIC DESIGNER</h2>
+                <p>Responsible for creating illustrations or images that convey the message of a product, designing graphics such as product illustrations, logos, and websites. This includes selecting colors, images, fonts, and layouts.</p>
+                <p class="assigned">ASSIGNED TO: KHAVYA VIONYSAH PUTRI S.</p>
+            </div>
+        </div>
+
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
-        
     </body>
-
-
 </html>
