--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
             <!-- Bagian 3 -->
             <div class="team-box">
+<img src="blob:https://web.whatsapp.com/0efe48fc-1313-4a98-81d7-02db89b699c2" width="250">
                 <h2>APPLICATION PROGRAMMER</h2>
                 <p>Responsible for designing the application flow to be developed and optimizing game performance.</p>
-                <p class="assigned">ASSIGNED TO: CARRISA AYLA SALSABILLA</p>
+                <p class="assigned">ASSIGNED TO: CARISSA AYLA SALSABILA</p>
             </div>
+
 
             <!-- Bagian 4 -->
             <div class="team-box">
