--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <!-- Bagian 3 -->
             <div class="team-box">
 <img src="blob:https://web.whatsapp.com/0efe48fc-1313-4a98-81d7-02db89b699c2" width="250">
+<img src=https://github.com/khavyaaa/informatika-kel-5-xc/issues/2#issue-2678210915>
                 <h2>APPLICATION PROGRAMMER</h2>
                 <p>Responsible for designing the application flow to be developed and optimizing game performance.</p>
                 <p class="assigned">ASSIGNED TO: CARISSA AYLA SALSABILA</p>
