--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <!-- Bagian 1 -->
             <div class="team-box">
                 <h2>WEB PROGRAMMER</h2>
+                <img src="https://i.ibb.co.com/7YWjCNs/Loveleen.jpg" alt="Loveleen" width="250">
                 <p>Responsible for designing, coding, and maintaining the quality of our website.</p>
                 <p class="assigned">ASSIGNED TO: LOVELEEN KALEELA HENDRAWAN</p>
             </div>
@@ -33,15 +34,15 @@
             <!-- Bagian 2 -->
             <div class="team-box">
                 <h2>GAME PROGRAMMER</h2>
+                <img src="https://i.ibb.co.com/C1wtd1b/Aulia.jpg" alt="Aulia" width="250">
                 <p>Responsible for designing the game flow to be developed.</p>
                 <p class="assigned">ASSIGNED TO: AULIA MUTHMAINNA</p>
             </div>
 
             <!-- Bagian 3 -->
             <div class="team-box">
-<img src="blob:https://web.whatsapp.com/0efe48fc-1313-4a98-81d7-02db89b699c2" width="250">
-<img src=https://github.com/khavyaaa/informatika-kel-5-xc/issues/2#issue-2678210915>
                 <h2>APPLICATION PROGRAMMER</h2>
+                <img src="https://i.ibb.co.com/w6hHwms/Carissa.jpg" alt="Carissa" width="250" >
                 <p>Responsible for designing the application flow to be developed and optimizing game performance.</p>
                 <p class="assigned">ASSIGNED TO: CARISSA AYLA SALSABILA</p>
             </div>
@@ -50,6 +51,7 @@
             <!-- Bagian 4 -->
             <div class="team-box">
                 <h2>CONTENT WRITER</h2>
+                <img src="https://i.ibb.co.com/5vbjVSq/Annisa.jpg" alt="Annisa" width="250">
                 <p>Responsible for writing informative and engaging articles to explain the game products.</p>
                 <p class="assigned">ASSIGNED TO: ANNISA PUTRI CHAIRANI</p>
             </div>
@@ -57,8 +59,9 @@
             <!-- Bagian 5 -->
             <div class="team-box full-width">
                 <h2>GRAPHIC DESIGNER</h2>
+                <img src="https://i.ibb.co.com/CHy634J/Khavya.jpg" alt="Khavya" width="250">
                 <p>Responsible for creating illustrations or images that convey the message of a product, designing graphics such as product illustrations, logos, and websites. This includes selecting colors, images, fonts, and layouts.</p>
-                <p class="assigned">ASSIGNED TO: KHAVYA VIONYSAH PUTRI S.</p>
+                <p class="assigned">ASSIGNED TO: KHAVYA VIONYSHA PUTRI S.</p>
             </div>
         </div>
 
